--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 sysinfo = "0.35.0" 
 ratatui = "0.29.0" 
+crossterm = "0.29.0"
 tokio = { version = "1", features = ["full"] }
